# aste

./: .A-B.address  .gitignore  CMakeLists.txt  TODO  aste.cpp  common.cpp  demo.sh  eval_mesh.py  join_mesh.py  mesh.cpp  mesh.hpp  meshReader.cpp  meshReader.hpp  metisUtils.cpp  metisUtils.hpp  mpiUtils.hpp  partition.cpp  partition.py  precice.hpp  preciceDist.cpp  readMesh.cpp  readVTK.cpp  read_mesh.py
mesh/: CMakeLists.txt  cellRange.cpp  cellRange.hpp  indexIterator.hpp  mesh.cpp  mesh.hpp  meshReader.cpp  meshReader.hpp  meshWriter.cpp  meshWriter.hpp  pointRange.cpp  pointRange.hpp  valueRange.cpp  valueRange.hpp
